# winboat-bridge

./: .env.example  Cargo.toml  build_win.sh  build_windows.sh  readme.md
.github/workflows/: release.yml
docs/: quickstart.md
src/: main.rs
